--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,6 +21,46 @@
     .input {
         @apply sm:flex-1 max-sm:w-full text-base leading-normal text-slate-gray pl-5 max-sm:p-5 outline-none sm:border-none border max-sm:border-slate-gray max-sm:rounded-full;
     }
+
+    .card {
+        @apply bg-white text-gray-700
+        w-72 min-h-[10rem]
+        shadow-lg rounded-md overflow-hidden;
+    }
+
+    .badge {
+        @apply px-3 py-1 rounded-full text-xs bg-gray-100;
+    }
+
+    .product-title {
+        @apply font-semibold text-xl
+        overflow-ellipsis overflow-hidden whitespace-nowrap;
+    }
+
+    .discount-precent {
+        @apply bg-green-500 
+        px-1.5 py-0.5 rounded-md
+        text-xs text-white;
+    }
+
+    .button-primary {
+        @apply border px-4 py-2 rounded-full bg-sky-600 text-white text-base font-montserrat transition duration-300 ease-in-out;
+    }
+
+    .button-primary:hover {
+        @apply transition duration-300 ease-in-out
+        bg-sky-900;
+    }
+
+    .button-icon {
+        @apply bg-gray-300 py-2 px-4 rounded-full
+        transition duration-300 ease-in-out;
+    }
+
+    .button-icon:hover {
+        @apply transition duration-300 ease-in-out
+        bg-gray-400;
+    }
 }
 
 @layer utilities {
