--- a/client/src/index.css
+++ b/client/src/index.css
@@ -63,18 +63,29 @@
     }
 
     .input-primary {
-        @apply
-        w-48 md:w-64 h-12 border rounded-xl px-2 
+        @apply w-48 md:w-64 h-12 border rounded-xl px-2;
     }
 
     .link-admin-panel {
-        @apply
-        flex items-center gap-2 text-gray-300 font-palanquin transition duration-200 ease-in-out cursor-pointer
+        @apply flex items-center gap-2 text-gray-300 font-palanquin transition duration-200 ease-in-out cursor-pointer rounded-md
+        gap-x-4 p-2;
     }
 
     .link-admin-panel:hover {
+        @apply bg-gray-500 transition duration-300 ease-in-out;
+    }
+
+    .admin-button {
+        @apply bg-gray-700 border py-2 px-4 rounded-md text-lg text-white transition duration-200 ease-in-out;
+    }
+
+    .admin-button:hover {
+        @apply bg-gray-600 transition duration-200 ease-in-out;
+    }
+
+    .admin-input {
         @apply
-        text-white transition duration-300 ease-in-out
+        w-full border rounded-md px-3 py-1 text-lg font-montserrat font-light
     }
 }
 
